Improved Null check Fixed test issues with nullability Improved return book workflow Added error handling in controller Improved Modulith transaction handling